<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/activity_registration_edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/activity_registration_edit_text_login_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/activity_registration_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/activity_registration_edit_text_password_hint"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_edit_text_login"/>

    <Button
        android:id="@+id/dz4_activity_registration_button_send"
        android:layout_width="100dp"
        android:text="@string/activity_registration_button_send_caption"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_registration_edit_text_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>