<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_student_add_new_student_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:gravity="center"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview_fragment_add_student"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:src="@drawable/camera_stub_image"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_fragment_student_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_fragment_student_add_new_photo"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_fragment_add_student"
        />

    <EditText
            android:id="@+id/edittext_fragment_student_add_write_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="Student Name"
            android:textSize="13dp"

        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_student_add_photo"
        />

    <EditText
        android:id="@+id/edittext_fragment_student_add_write_description"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:hint="Description"
        android:textSize="13dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_student_add_write_name"/>

    <EditText
            android:id="@+id/edittext_fragment_student_add_write_mark"
            android:digits="0123456789"
            android:inputType="number"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:hint="Student Mark"
            android:textSize="13dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_student_add_write_description"/>

    <EditText
            android:id="@+id/edittext_fragment_student_add_write_group"
            android:digits="0123456789"
            android:inputType="number"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:hint="Student Group"
            android:textSize="13dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_student_add_write_mark"/>

    <TextView
            android:id="@+id/textview_fragment_student_add_show_date"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:textColor="@color/ColorBlack"
            android:hint="Select BirthDay"
            android:textColorHint="@color/ColorBlack"
            android:textSize="13dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_student_add_write_group"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_fragment_student_add_date"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/button_fragment_student_add_date"
            app:layout_constraintStart_toEndOf="@+id/textview_fragment_student_add_show_date"
            app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_student_add_write_group"
            />


    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_fragment_student_add_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fragment_student_add_new_student"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_fragment_student_add_show_date"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_fragment_student_cancel_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fragment_student_cancel_new_student"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_fragment_student_add_student"
            />


</androidx.constraintlayout.widget.ConstraintLayout>